checking for the month is wrong, related fdo#58340

Change-Id: I9920e8ad84da58f32a61a4bd864ea80b011ad746